--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-lg-12">
-					<h1>1.1.1.1</h1>
+          <button id="ip-button" type="button">1.1.1.1</button>
 				</div>
 			</div>
 		</div>
