Added some information

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-lg-12">
+          <p>Your (Public) IP Address</p>
           <button id="ip-button" type="button">1.1.1.1</button>
+          <p>&nbsp;</p>
+          <p>Click to copy - Don't want your IP address shown to websites? Use <a href="https://protonvpn.com/">Proton VPN!</p>
 				</div>
 			</div>
 		</div>
